# augint-shell

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_SHELL_ROUND_13_ISSUES.md  CHANGELOG.md  CLAUDE.md  INSTITUTIONAL_KNOWLEDGE.md  LICENSE  NOTES.md  PLAN.md  README.md  RULES.md  TMUX.md  VOICE_AGENT_PLAN.md  ai-tools.md  ai_shell.html  augint-tools.md  index.html  opencode.json  pyproject.toml  renovate.json5  search.js
docker/: motd.sh  (+3 more)
landline-scrubber/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  workspace.toml
landline-scrubber/.agents/skills/ai-workspace-sync/: SKILL.md
landline-scrubber/.claude/skills/ai-workspace-branch/: SKILL.md
landline-scrubber/.claude/skills/ai-workspace-status/: SKILL.md
landline-scrubber/.claude/skills/ai-workspace-sync/: SKILL.md
landline-scrubber/.github/workflows/: pipeline.yml
woxom-ecosystem/: .aider.conf.yml  .aiderignore  .gitignore  CLAUDE.md  PLAN.md  README.md  main.py  opencode.json  pyproject.toml  workspace.yaml
woxom-ecosystem/.agents/skills/ai-standardize-release/: SKILL.md
woxom-ecosystem/.agents/skills/ai-submit-work/: SKILL.md
woxom-ecosystem/.claude/skills/ai-workspace-foreach/: SKILL.md
woxom-ecosystem/.claude/skills/ai-workspace-health/: SKILL.md
woxom-ecosystem/.claude/skills/ai-workspace-pick/: SKILL.md
woxom-ecosystem/.claude/skills/ai-workspace-status/: SKILL.md
woxom-ecosystem/.claude/skills/ai-workspace-update/: SKILL.md
woxom-ecosystem/.codex/: config.toml
woxom-ecosystem/.github/workflows/: pipeline.yml
(+326 files in other folders)
