[project]
name = "landline-scrubber"
version = "0.1.0"
description = "Workspace for Landline Scrubber: ai-lls-lib, ai-lls-api, ai-lls-web"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "augint-github>=1.3.5",
    "augint-shell>=0.22.5",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.uv]
package = false
